<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movies Library</string>
    <string name="action_insert_dummy_data">Insert Dummy Movie</string>
    <string name="action_delete_all_entries">Delete All Movies</string>
    <string name="empty_view_title_text">Feeling Bored...</string>
    <string name="empty_view_subtitle_text">Get started by adding a Movie</string>
    <string name="editor_activity_title_new_movies">Add a Movie</string>
    <string name="editor_activity_title_edit_movies">Edit Movie</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_movies_successful">Movie saved</string>
    <string name="editor_delete_movies_failed">Movie deletion failed</string>
    <string name="editor_delete_movies_successful">Movie successfully deleted</string>
    <string name="editor_update_movie_successful">Movie updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_movie_successful">Movie deleted</string>
    <string name="editor_delete_movie_failed">Error with deleting Movie</string>
    <string name="delete_dialog_msg">Delete this Movie?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Movie Name</string>
    <string name="category_summary">Movie Summary</string>
    <string name="category_gender">Movie Type</string>
    <string name="hint_movie_name">Name</string>
    <string name="hint_movie_summary">Summary</string>
    <string name="hint_movie_gender">Type</string>
    <string name="genre_unknown">Unknown</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_action">Action</string>
    <string name="rating">Rating</string>
    <string name="genre_romantic">Romantic</string>
    <string name="genre_animated">Animated</string>
    <string name="genre_scifi">Science_Fiction</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_historical">Historical</string>
    <string name="genre_historical_fiction">Historical Fiction</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_magical_realism">Magical Realism</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_paranoid">Paranoid</string>
    <string name="genre_philosophical">Philosophical</string>
    <string name="genre_political">Political</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_saga">Saga</string>
    <string name="genre_satire">Satire</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_slice_of_Life">Slice of Life</string>
    <string name="genre_speculative">Speculative</string>
    <string name="genre_surreal">Surreal</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_urban">Urban</string>
    <string name="genre_western">Western</string>
    <string name="summary_txt">Summary</string>
    <string name="action_edit">Edit</string>
</resources>
