<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".activities.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_movies_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_movie_name"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle"
            android:text="@string/category_gender" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_genre"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle"
            android:text="@string/rating" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/rtbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="5"
                android:numStars="5"
                android:stepSize="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/summary_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle"
            android:text="@string/category_summary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_movies_summary"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_movie_summary"
                    android:inputType="textCapWords|textMultiLine"
                    android:maxLength="2000" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
